--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     const canvas = document.getElementById("wheel");
     const ctx = canvas.getContext("2d");
     const segments = ["Giảm giá 5k vé phim", "Giảm giá 10k vé phim", "Chúc may mắn lần sau", "Giảm giá 5k bắp nước", "Giảm giá 50k vé phim", "+1 lượt quay"];
-    const colors = ["#A3E4D7", "#F9E79F", "#FADBD8", "#D5A6BD", "#E74C3C", "#85C1AE"];
+    const colors = ["#A3E4D7", "#F9E79F", "#FADBD8", "#D5A6BD", "#00FF00", "#85C1AE"];
     const spinBtn = document.getElementById("spin");
     const result = document.getElementById("result");
     const spinSound = document.getElementById("spinSound");
