--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Săn Tuần Lộc</title>
+  <title>Săn Tuần Lộc Jollibee cùng KhoaCGV</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
